--- a/refs.bib
+++ b/refs.bib
@@ -411,4 +411,15 @@ abstract = {Observations of glacier albedo are sparse, despite being a first-ord
   publisher = {Cambridge University Press},
 }
 
+@Article{Mingo2010,
+  author    = {Mingo, Laurent and Flowers, Gwenn E},
+  journal   = {Journal of Glaciology},
+  title     = {An integrated lightweight ice-penetrating radar system},
+  year      = {2010},
+  number    = {198},
+  pages     = {709--714},
+  volume    = {56},
+  publisher = {Cambridge University Press},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
